--- a/views/reader_home.ejs
+++ b/views/reader_home.ejs
@@ -9,20 +9,24 @@
 <body class="reader_home">
     <%- include('_navbar') %>
     <h1>Reader Home Page</h1>
-    <div class="main_content">
+
         <div class="reader_info">
-            <h2><%= blog.blog_title %></h2>
-            <h3>by <%= blog.author_name %></h3>
-            <h4>Published Articles</h4>
-            <div class="cards_container">
-                <% articles.forEach(article => { %>
-                    <a href="/readers/article/<%= article.id %>" class="card">
-                        <h3><%= article.title %></h3>
-                        <p>Published on: <%= article.published_at %></p>
-                    </a>
-                <% }); %>
-            </div>
+            <% blogs.forEach(blog => { %> 
+                <div class="main_content">
+                    <h2><%= blog.blog_title %></h2>
+                    <h3>by <%= blog.author_name %></h3>
+                    <h4>Published Articles</h4>
+                    <div class="cards_container">
+                        <% blog.articles.forEach(article => { %>
+                            <a href="/readers/article/<%= article.id %>" class="card">
+                                <h3><%= article.title %></h3>
+                                <p>Published on: <%= article.published_at %></p>
+                            </a>
+                        <% }); %>
+                    </div>
+                </div>
+            <% }); %>
         </div>
-    </div>
+
 </body>
 </html>
