--- a/views/home_page.ejs
+++ b/views/home_page.ejs
@@ -13,16 +13,12 @@
         <div class='main_content'>
                 <h2>Log In</h2>
                 <form action="/login" method="POST">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
-                    <button type="submit">Log In</button>
+                    <label for="username">Username</label>
+                    <input type="text" class="input_box" id="username" name="username" required><br></br>
+                    <label for="password">Password</label>
+                    <input type="password" class="input_box" id="password" name="password" required><br></br>
+                    <button type="submit" id="button">Log In</button>
                 </form>
-                <ul>
-                    <li><a href="/authors">Go to Author Home Page</a></li>
-                    <li><a href="/readers">Go to Reader Home Page</a></li>
-                </ul>
         </div>
     </div>
 </body>
