--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -4,7 +4,7 @@
         <li><a href="/authors">AUTHOR HOME</a></li>
         <li><a href="/readers">READER HOME</a></li>
     </ul>
-    <form action="/logout" method="POST">
+    <form action="/users/logout">
     <button type="submit" class="logout_button">LOGOUT</button>
     </form>
 </nav>
