--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,8 +8,11 @@
 </head>
 <body>
     <h1>Add User</h1>
-    <form action="add-user" method="post">
-        <p>User: <input id="user" type="text" name="user_name" /></p>
+    <form action="/users/signup" method="POST">
+        <label for="user_name">Username</label>
+        <input type="text" class="input_box" id="user_name" name="user_name" required><br></br>
+        <label for="password">Password</label>
+        <input type="password" class="input_box" id="password" name="password" required><br></br>
         <button type="submit">Create a new user record</button>
     </form>
 </body>
