--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -1,5 +1,5 @@
 <nav class = 'navbar'>
-    <a href="/" id="home_button">B<span id="dot">.</span></a>
+    <a href="/home_page" id="home_button">B<span id="dot">.</span></a>
     <ul>
         <li><a href="/authors">AUTHOR HOME</a></li>
         <li><a href="/readers">READER HOME</a></li>
